# haskell-tags-nix

./: .gitignore  README.md  README.org  default.nix  flake.nix
.github/workflows/: ci.yml
doc/: links.org  nix.mac.md  nix.md  nix.org  nix.org.el
nix/: args.nix  ci.nix  compat.nix  default.nix  deps-haskellnix.nix  deps-nixpkgs.nix  deps-set.nix  deps-srcs.nix  deps-unpack.nix  eval-dynamic.nix  eval-static.nix  overlay.nix  run-dynamic.nix  run-static.nix  run.nix  set.nix  sources.json  srcs-haskellnix.nix  srcs-nixpkgs.nix  tags-dynamic.nix  tags-eval.nix  tags-run.nix  tags-static.nix  tags.nix
nix/module/: nixpkgs.nix
nix/sources/: sources.json
support/: dependencies-upgrade  docs-generate  materialization-update
test/: config.nix  default.nix  test-tags.bats
test/example/: cabal.project  haskell-tags-nix-example.cabal  nix-haskell-tags-example.cabal
test/example/src/: Example.hs  Main.hs
test/materialized/: default.nix
test/materialized/.plan.nix/: haskell-tags-nix-example.nix  nix-haskell-tags-example.nix
