cabal-version:       >=1.10
name:                nix-haskell-tags-example
version:             0.1.0.0
author:              Sukant Hajra
maintainer:          rrudbskr5g@snkmail.com
build-type:          Simple

executable nix-haskell-tags-example
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base, void
  default-language:    Haskell2010
